Change Log for OpenXava project
===============================

- New getSignInURL() method in ISignInHelperProvider.
- Return type for init() method in ISignInHelperProvider now is String[] instead of String.
- New start(String dbName, int port) method with port number in DBServer.
- Calendar format for list mode automatic for every module whose entity contains a date.
- New defaultValues property in NewAction to send default values in a string with key/value format. 
- FilePond JavaScript library used by upload editor upgraded to 4.30.4 for security reasons.
- CKEditor replaced by TinyMCE for @TextHtml and @Discussion for security reasons.
- Fix: Broken links in customizing doc of reference guide.
- New property signInJSP in naviox.properties to define a custom login page.
- Inline style no longer allowed in HTML.
- Inline style removed from all generated HTML code by OpenXava.
- Many methods from org.openxava.web.Style removed, used internally by UI generator.
- Data and time for posts in @Discussion use the format of date fields.
- Attribute cssStyle ignored in <xava:link> and <xava:image> taglibs.
- New classes in base.css to use as alternative to inline style, like ox-display-none, ox-width-100, etc. 
- Fix: UI with no CSS style at all if the user has as preference a no longer existing theme. 
- New <xava:nonce/> taglib to generate a nonce number for using in inline JavaScript.
- Fix: Inline JavaScript for events in HTML elements.
- Fix: XSLT injection vulnerabilities.
- Fix: X-Content-Type-Options Header Missing.
- Fix: Cookie without SameSite attribute.
- Fix: Application error disclosure.
- Fix: Session ID in URL rewrite.
- Fix: Cross-Site Scripting (XSS) vulnerabilities.
- Fix: Data filtering in .htaccess for some URLs.
- Fix: Content Security Policy (CSP) Header Not Set.
- New @Mask annotation to define the valid format for entering data in a text field.
- HtmlUnit upgraded to 2.70.
- Fix: Denial of service vulnerability.